objects/Order__c/Order__c.object-meta.xml
<CustomObject>
    <label>Order</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>