objects/Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>An explicit account lookup that should only be used if the order is not opportunity driven.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account-based Orders</relationshipLabel>
    <relationshipName>Account_Based_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>