objects/Order__c/fields/Account_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Segment__c</fullName>
    <formula>IF( 
Opportunity__c &lt;&gt; null, 
TEXT( Opportunity__r.Account.Account_Sales_Channel__c ), 
IF( 
Account__c &lt;&gt; null, 
TEXT( Account__r.Account_Sales_Channel__c ), 
null 
) 
)</formula>
    <label>Account Business Segment</label>
    <type>Text</type>
</CustomField>