objects/Order__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__r.Account.Id)), Opportunity__r.Account.Name, Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>