objects/Order__c/fields/After_Turn_up_Revision_Required__c.field-meta.xml
<CustomField>
    <fullName>After_Turn_up_Revision_Required__c</fullName>
    <description>NIE to indicate if any revisions are necessary once they have performed QA alarming validation.</description>
    <inlineHelpText>NIE to indicate if any revisions are necessary once they have performed QA alarming validation.</inlineHelpText>
    <label>After Turn-up Revision Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>