objects/Order__c/fields/Approved_MRR__c.field-meta.xml
<CustomField>
    <fullName>Approved_MRR__c</fullName>
    <description>The MRR on the opportunity at the time the opportunity moves to a closed/won stage and the credit check notification email is sent</description>
    <inlineHelpText>The MRR on the opportunity at the time the opportunity moves to a closed/won stage and the credit check notification email is sent</inlineHelpText>
    <label>Credit Approved MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>