objects/Order__c/fields/Assigned_CPM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned CPM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>