objects/Order__c/fields/Build_Category__c.field-meta.xml
<CustomField>
    <fullName>Build_Category__c</fullName>
    <description>Customer or Network request</description>
    <inlineHelpText>Customer or Network request</inlineHelpText>
    <label>Build Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>