objects/Order__c/fields/Build_Status__c.field-meta.xml
<CustomField>
    <fullName>Build_Status__c</fullName>
    <inlineHelpText>A field updated by the Build Order Owner to give the most recent status of a build order.</inlineHelpText>
    <label>Build Status</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>