objects/Order__c/fields/Building_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Building_CLLI__c</fullName>
    <formula>Building__r.Building_CLLI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building CLLI</label>
    <type>Text</type>
</CustomField>