objects/Order__c/fields/Building_State__c.field-meta.xml
<CustomField>
    <fullName>Building_State__c</fullName>
    <formula>Building__r.State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building State</label>
    <type>Text</type>
</CustomField>