objects/Order__c/fields/Cancel_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason_Code__c</fullName>
    <label>Cancel Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer cancelled request for services</fullName>
            </value>
            <value>
                <fullName>ESO entered in error</fullName>
            </value>
            <value>
                <fullName>ESO entered prior to iCert funding approval</fullName>
            </value>
            <value>
                <fullName>Run rate decrease no longer warrants an augment</fullName>
            </value>
            <value>
                <fullName>This is a Zayo order. Not supported by Allstream SF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>