objects/Order__c/fields/Contract_Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cancel_Date__c</fullName>
    <label>Contract Cancel Date</label>
    <type>Date</type>
</CustomField>