objects/Order__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <formula>Opportunity__r.Contract_Signed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>