objects/Order__c/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Actual Install</fullName>
            </value>
            <value>
                <fullName>Actual Churn</fullName>
            </value>
            <value>
                <fullName>Anticipated Install</fullName>
            </value>
            <value>
                <fullName>Anticipated Churn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>