objects/Order__c/fields/Credit_Check_Approval__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Approval__c</fullName>
    <description>A credit check must be performed on all new logo and any existing logo increasing credit limit over conditional amount.</description>
    <inlineHelpText>A credit check must be performed on all new logo and any existing logo increasing credit limit over conditional amount.</inlineHelpText>
    <label>Credit Check Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Credit Approved pending condition</fullName>
            </value>
            <value>
                <fullName>Credit Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>