objects/Order__c/fields/Credit_Check_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Notes__c</fullName>
    <description>Special notes for the credit approval.</description>
    <inlineHelpText>Special notes for the credit approval.</inlineHelpText>
    <label>Credit Check Notes</label>
    <type>TextArea</type>
</CustomField>