objects/Order__c/fields/Credit_Commitment_Met__c.field-meta.xml
<CustomField>
    <fullName>Credit_Commitment_Met__c</fullName>
    <description>The date the credit hold reason code was satisfied and credit approval complete.</description>
    <inlineHelpText>The date the credit hold reason code was satisfied and credit approval complete.</inlineHelpText>
    <label>Credit Commitment Met</label>
    <type>DateTime</type>
</CustomField>