objects/Order__c/fields/Customer_Commit_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Commit_Date__c</fullName>
    <label>Customer Commit Date</label>
    <type>Date</type>
</CustomField>