objects/Order__c/fields/Data_Missing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Data_Missing_Comments__c</fullName>
    <label>Data Missing Comments</label>
    <type>TextArea</type>
</CustomField>