objects/Order__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <description>Supply the equipment needed for the build order</description>
    <inlineHelpText>Supply the equipment needed for the build order</inlineHelpText>
    <label>Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10G MetroNode</fullName>
            </value>
            <value>
                <fullName>1G NID</fullName>
            </value>
            <value>
                <fullName>9000V</fullName>
            </value>
            <value>
                <fullName>APOT</fullName>
            </value>
            <value>
                <fullName>ASR9001</fullName>
            </value>
            <value>
                <fullName>ASR9912</fullName>
            </value>
            <value>
                <fullName>Ciena Cards</fullName>
            </value>
            <value>
                <fullName>CN3930</fullName>
            </value>
            <value>
                <fullName>CN3931</fullName>
            </value>
            <value>
                <fullName>CN4200</fullName>
            </value>
            <value>
                <fullName>CN5142</fullName>
            </value>
            <value>
                <fullName>CN5160</fullName>
            </value>
            <value>
                <fullName>CN6500</fullName>
            </value>
            <value>
                <fullName>CN6500-14</fullName>
            </value>
            <value>
                <fullName>CN6500-2</fullName>
            </value>
            <value>
                <fullName>CN6500-32</fullName>
            </value>
            <value>
                <fullName>CN6500-7</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>FODU</fullName>
            </value>
            <value>
                <fullName>Fujitsu Cards</fullName>
            </value>
            <value>
                <fullName>FW4100</fullName>
            </value>
            <value>
                <fullName>FW4500</fullName>
            </value>
            <value>
                <fullName>FW9500</fullName>
            </value>
            <value>
                <fullName>HN4000</fullName>
            </value>
            <value>
                <fullName>Infinera</fullName>
            </value>
            <value>
                <fullName>ME3400</fullName>
            </value>
            <value>
                <fullName>ME3600</fullName>
            </value>
            <value>
                <fullName>NID SHELF</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>