objects/Order__c/fields/Equipment_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Ordered_Date__c</fullName>
    <label>Equipment Ordered Date</label>
    <type>Date</type>
</CustomField>