objects/Order__c/fields/ESO_Classification__c.field-meta.xml
<CustomField>
    <fullName>ESO_Classification__c</fullName>
    <label>ESO Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Class I</fullName>
            </value>
            <value>
                <fullName>Class II</fullName>
            </value>
            <value>
                <fullName>Class III</fullName>
            </value>
            <value>
                <fullName>Class IV</fullName>
            </value>
            <value>
                <fullName>Class V</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>