objects/Order__c/fields/Estimated_BLA_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_BLA_Completion_Date__c</fullName>
    <label>Estimated BLA Completion Date</label>
    <type>Date</type>
</CustomField>