objects/Order__c/fields/Estimated_Equipment_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Equipment_Arrival_Date__c</fullName>
    <label>Estimated Equipment Arrival Date</label>
    <type>Date</type>
</CustomField>