objects/Order__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>After Turn-up Revision</fullName>
            </value>
            <value>
                <fullName>Bids Not Required</fullName>
            </value>
            <value>
                <fullName>Build SMP</fullName>
            </value>
            <value>
                <fullName>Customer without OSP</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>Disconnect Third Party Access</fullName>
            </value>
            <value>
                <fullName>Expedite Splice Notification</fullName>
            </value>
            <value>
                <fullName>Field Eng Only</fullName>
            </value>
            <value>
                <fullName>Network Add Card</fullName>
            </value>
            <value>
                <fullName>Network OSP Only</fullName>
            </value>
            <value>
                <fullName>Network with OSP Construction</fullName>
            </value>
            <value>
                <fullName>Network with OSP Planners and No Construction</fullName>
            </value>
            <value>
                <fullName>Network without OSP</fullName>
            </value>
            <value>
                <fullName>No Construction</fullName>
            </value>
            <value>
                <fullName>No Fiber SMP Approval Required</fullName>
            </value>
            <value>
                <fullName>No Field Eng</fullName>
            </value>
            <value>
                <fullName>No Initiate or Execute BLA</fullName>
            </value>
            <value>
                <fullName>No NIE Required</fullName>
            </value>
            <value>
                <fullName>No NIE Required on Decomm</fullName>
            </value>
            <value>
                <fullName>No NIE SMP Approval Required</fullName>
            </value>
            <value>
                <fullName>No NST Required</fullName>
            </value>
            <value>
                <fullName>No OSP Construction and No Fiber SMP</fullName>
            </value>
            <value>
                <fullName>No Power SMP Approval Required</fullName>
            </value>
            <value>
                <fullName>No Transport Eng Required</fullName>
            </value>
            <value>
                <fullName>OSP Review Required</fullName>
            </value>
            <value>
                <fullName>Permitting Not Required</fullName>
            </value>
            <value>
                <fullName>Remove Execute BLA</fullName>
            </value>
            <value>
                <fullName>Remove NIE SMP Approval</fullName>
            </value>
            <value>
                <fullName>Remove OSP</fullName>
            </value>
            <value>
                <fullName>Remove Transport Update Drawing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>