objects/Order__c/fields/Fiber_Assigner__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Assigner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OSP Planner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>