objects/Order__c/fields/ICC_Subscriber_ID__c.field-meta.xml
<CustomField>
    <fullName>ICC_Subscriber_ID__c</fullName>
    <formula>IF(ISBLANK(Account__c), Opportunity__r.Account.Customer_Detail__r.ICC_Subscriber_ID__c, Account__r.Customer_Detail__r.ICC_Subscriber_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICC Subscriber ID</label>
    <type>Text</type>
</CustomField>