objects/Order__c/fields/Is_Queue_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Queue_Owner__c</fullName>
    <formula>Owner:Queue.Id != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Queue Owner</label>
    <type>Checkbox</type>
</CustomField>