objects/Order__c/fields/ITS_Program_Meeting_PM__c.field-meta.xml
<CustomField>
    <fullName>ITS_Program_Meeting_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITS Program Meeting PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders_6</relationshipName>
    <type>Lookup</type>
</CustomField>