objects/Order__c/fields/ITS_Schedule_Training_PM__c.field-meta.xml
<CustomField>
    <fullName>ITS_Schedule_Training_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ITS Schedule/Training PM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders6</relationshipName>
    <type>Lookup</type>
</CustomField>