objects/Order__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Build Location</description>
    <inlineHelpText>Build Location</inlineHelpText>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>