objects/Order__c/fields/Market_Area__c.field-meta.xml
<CustomField>
    <fullName>Market_Area__c</fullName>
    <description>Used by email template to distinguish CA orders from US</description>
    <formula>IF(Opportunity__r.Account.Customer_Detail__c != null, Opportunity__r.Account.Customer_Detail__r.Market_Area__r.Name,
  IF( Opportunity__r.Account.BillingCountry == &quot;CA&quot;, &quot;National&quot;,&quot;Not National&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Area</label>
    <type>Text</type>
</CustomField>