objects/Order__c/fields/New_Contract_MRC__c.field-meta.xml
<CustomField>
    <fullName>New_Contract_MRC__c</fullName>
    <label>New Contract MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>