objects/Order__c/fields/Old_Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Old_Contract_Start_Date__c</fullName>
    <label>Old Contract Start Date</label>
    <type>Date</type>
</CustomField>