objects/Order__c/fields/Opportunity_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Support Specialist</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Title</field>
            <operation>startsWith</operation>
            <value>Sales Support Specialist</value>
        </filterItems>
        <filterItems>
            <field>User.Title</field>
            <operation>startsWith</operation>
            <value>Agent Project Coordinator</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunity_Coordinator_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>