objects/Order__c/fields/Order_Actual_NRR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Actual_NRR_Amount__c</fullName>
    <formula>Opportunity__r.NRR_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Filled in by MRR/NRR Opp Products.  Use CPQ or Add Manually; Amount cannot be updated after Order to Pending</inlineHelpText>
    <label>Order Actual NRR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>