objects/Order__c/fields/Order_Actual_Turndown_Writedown_Amount__c.field-meta.xml
<CustomField>
    <fullName>Order_Actual_Turndown_Writedown_Amount__c</fullName>
    <formula>Opportunity__r.Current_MRR_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total for all Turndowns and/or Write-downs on active solutions on this Order. For Change Orders, this amount is deducted from New MRR to arrive at Net Difference.</inlineHelpText>
    <label>Order Actual Turndown/Writedown Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>