objects/Order__c/fields/Order_Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Completion_Status__c</fullName>
    <label>Order Completion Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>On-hold</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>