objects/Order__c/fields/Order_ID_for_Install_Contract__c.field-meta.xml
<CustomField>
    <fullName>Order_ID_for_Install_Contract__c</fullName>
    <description>For Contract Renewal reporting</description>
    <label>Order ID for Install Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>