objects/Order__c/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <formula>IF( TEXT(Opportunity__r.StageName) = &quot;Proposed&quot;, &quot;Proposed&quot;, 
   IF( OR(TEXT(Opportunity__r.StageName) = &quot;Closed Won&quot;, TEXT(Opportunity__r.StageName) = &quot;Stage 5 - Accepted / Order Pending&quot;  )&amp;&amp; TEXT(Opportunity__r.Order_Status__c) != &quot;Order to Pending&quot; , &quot;Customer Signature&quot;,
     IF(OR(TEXT(Opportunity__r.StageName) = &quot;Closed Won&quot;,TEXT(Opportunity__r.StageName) = &quot;Stage 5 - Accepted / Order Pending&quot; )&amp;&amp; TEXT(Opportunity__r.Order_Status__c) = &quot;Order to Pending&quot;, &quot;Order Submitted&quot;, &quot;Draft&quot;
     )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Stage</label>
    <type>Text</type>
</CustomField>