objects/Order__c/fields/Order_Type2__c.field-meta.xml
<CustomField>
    <fullName>Order_Type2__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>