objects/Order__c/fields/Original_Contract_MRC__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_MRC__c</fullName>
    <description>For Contract Renewal Orders</description>
    <label>Original Contract MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>