objects/Order__c/fields/OSP_Build_Category__c.field-meta.xml
<CustomField>
    <fullName>OSP_Build_Category__c</fullName>
    <inlineHelpText>This field is to be filled out by OSP.</inlineHelpText>
    <label>OSP Build Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Building</fullName>
            </value>
            <value>
                <fullName>Existing Building</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Existing Building with Construction</fullName>
            </value>
            <value>
                <fullName>Network Backbone</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>