objects/Order__c/fields/OSP_Major_Project__c.field-meta.xml
<CustomField>
    <fullName>OSP_Major_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>OSP to add a check to this checkbox if the order qualifies as a major project.</inlineHelpText>
    <label>OSP Major Project?</label>
    <type>Checkbox</type>
</CustomField>