objects/Order__c/fields/OSP_Required__c.field-meta.xml
<CustomField>
    <fullName>OSP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OSP Required</label>
    <type>Checkbox</type>
</CustomField>