objects/Order__c/fields/Owner_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Owner_Sales_Channel__c</fullName>
    <formula>Opportunity__r.Account.Sales_Channel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Sales Channel</label>
    <type>Text</type>
</CustomField>