objects/Order__c/fields/Power_SMP_Time_PST__c.field-meta.xml
<CustomField>
    <fullName>Power_SMP_Time_PST__c</fullName>
    <description>Enter the time 00:00 AM / PM (8 characters) that the Power SMP will take place (PST)</description>
    <inlineHelpText>Enter the time 00:00 AM / PM (8 characters) that the Power SMP will take place (PST)</inlineHelpText>
    <label>Power SMP Time (PST)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>