objects/Order__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>TF</fullName>
            </value>
            <value>
                <fullName>Traditional Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>