objects/Order__c/fields/Provisioning_Plan_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Plan_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisioning Plan Enabled</label>
    <type>Checkbox</type>
</CustomField>