objects/Order__c/fields/SE_Notes__c.field-meta.xml
<CustomField>
    <fullName>SE_Notes__c</fullName>
    <label>SE Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>