objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Stage of the sales process you are currently working</inlineHelpText>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Working</fullName>
            </value>
            <value>
                <fullName>Sales Complete</fullName>
            </value>
            <value>
                <fullName>Indirect - Sales Complete</fullName>
            </value>
            <value>
                <fullName>Completed to Billing/Billing Only</fullName>
            </value>
            <value>
                <fullName>Returned to Sales</fullName>
            </value>
            <value>
                <fullName>Referred to SE</fullName>
            </value>
            <value>
                <fullName>SSS Held</fullName>
            </value>
            <value>
                <fullName>SE Received</fullName>
            </value>
            <value>
                <fullName>SE Held</fullName>
            </value>
            <value>
                <fullName>SE Complete</fullName>
            </value>
            <value>
                <fullName>SSS SE Received</fullName>
            </value>
            <value>
                <fullName>Order to Pending</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Records Updated Only/No Order</fullName>
            </value>
            <value>
                <fullName>Returned to Account Specialists - Wholesale</fullName>
            </value>
            <value>
                <fullName>Order Accepted</fullName>
            </value>
            <value>
                <fullName>SSS Reviewing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>