objects/Order__c/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <label>Order Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC Held</fullName>
            </value>
            <value>
                <fullName>MSAG Validation</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Product Build</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Order Cancelled</fullName>
            </value>
            <value>
                <fullName>Customer Under Contract</fullName>
            </value>
            <value>
                <fullName>Can Not Provide Product(s) Sold</fullName>
            </value>
            <value>
                <fullName>Changed Mind</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>DG Clarification</fullName>
            </value>
            <value>
                <fullName>Sales Support Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>