objects/Order__c/fields/US_Contract_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>US_Contract_Cancel_Reason__c</fullName>
    <label>US Contract Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Consolidation/Downsize</fullName>
            </value>
            <value>
                <fullName>Competitive Loss - Competitor</fullName>
            </value>
            <value>
                <fullName>Contract Renewals</fullName>
            </value>
            <value>
                <fullName>Feature Change</fullName>
            </value>
            <value>
                <fullName>Internal Clean Up</fullName>
            </value>
            <value>
                <fullName>Moves</fullName>
            </value>
            <value>
                <fullName>Non Payment</fullName>
            </value>
            <value>
                <fullName>Service Conversions</fullName>
            </value>
            <value>
                <fullName>Service Downgrades</fullName>
            </value>
            <value>
                <fullName>Temporary Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>