objects/Order__c/fields/Winning_ICB__c.field-meta.xml
<CustomField>
    <fullName>Winning_ICB__c</fullName>
    <description>This is the &quot;Winning  ICB&quot; from the Orders related Opportunity.</description>
    <inlineHelpText>This is the &quot;Winning  ICB&quot; from the Orders related Opportunity.</inlineHelpText>
    <label>Winning ICB</label>
    <length>50</length>
    <type>Text</type>
</CustomField>