objects/Order__c/fields/Zayo_Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Zayo_Service_Order__c</fullName>
    <description>Cross reference to Zayo Service Order for post close reporting of CI products</description>
    <inlineHelpText>Zayo Service Order cross reference for post close EL SF Opportunities</inlineHelpText>
    <label>Zayo Service Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>